force-app/main/default/objects/Invoice__c/fields/Adjusted_Cost__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Cost__c</fullName>
    <description>COGS after internal/vendor cost recovery. Total_Cost__c minus Internal_Cost_Recovery__c. Drives division GP rollups.</description>
    <formula>NULLVALUE(Total_Cost__c, 0) - NULLVALUE(Internal_Cost_Recovery__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Cost</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>