force-app/main/default/objects/Invoice__c/fields/Adjusted_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Revenue__c</fullName>
    <description>Recognized revenue after customer-facing credits. Total_Revenue__c minus Customer_Revenue_Adjustment__c. Drives division revenue and GP rollups.</description>
    <formula>NULLVALUE(Total_Revenue__c, 0) - NULLVALUE(Customer_Revenue_Adjustment__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Revenue</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>