force-app/main/default/objects/Invoice__c/fields/Back_Charge__c.field-meta.xml
<CustomField>
    <fullName>Back_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Back Charge</label>
    <type>Checkbox</type>
</CustomField>