force-app/main/default/objects/Invoice__c/fields/Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due__c</fullName>
    <description>Balance remaining on this invoice. Calculated as Line Items Total minus Paid Amount. Update via flow once Line_Items_Total__c is deployed.</description>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>