force-app/main/default/objects/Invoice__c/fields/Billable_Sod_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Billable_Sod_Sqft__c</fullName>
    <label>Billable Sod Sqft</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>