force-app/main/default/objects/Invoice__c/fields/Billable_Tree_Count__c.field-meta.xml
<CustomField>
    <fullName>Billable_Tree_Count__c</fullName>
    <label>Billable Tree Count</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>