force-app/main/default/objects/Invoice__c/fields/Builder_Market_Account__c.field-meta.xml
<CustomField>
    <fullName>Builder_Market_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Builder Market Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (Builder Market Account)</relationshipLabel>
    <relationshipName>Invoices_BMA</relationshipName>
    <type>Lookup</type>
</CustomField>