force-app/main/default/objects/Invoice__c/fields/Builder_WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>Builder_WorkOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Runtime-visible standard WorkOrder lookup used by the Home Builder standard invoice path.</description>
    <label>Builder Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Builder Invoices</relationshipLabel>
    <relationshipName>BuilderInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>