force-app/main/default/objects/Invoice__c/fields/Customer_Revenue_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Revenue_Adjustment__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Customer-facing credit, invoice reduction, credit memo, or concession that reduces recognized revenue. Finance-editable input. Does NOT include vendor/crew/subcontractor back-charges (use Internal Cost Recovery for those).</description>
    <inlineHelpText>Customer-facing credit/concession that reduces recognized revenue. Leave 0 if none.</inlineHelpText>
    <label>Customer Revenue Adjustment</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>