force-app/main/default/objects/Invoice__c/fields/Division_Account__c.field-meta.xml
<CustomField>
    <fullName>Division_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Division Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices_Division_Account</relationshipName>
    <type>Lookup</type>
</CustomField>