force-app/main/default/objects/Invoice__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Payment due date. Net 30 from Invoice_Date__c by default.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>