force-app/main/default/objects/Invoice__c/fields/External_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Invoice_ID__c</fullName>
    <description>QuickBooks or accounting system invoice number. Used by Celigo for two-way sync. External ID prevents duplicate invoice creation.</description>
    <externalId>true</externalId>
    <label>External Invoice ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>