force-app/main/default/objects/Invoice__c/fields/GP_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>GP_Approval_Status__c</fullName>
    <description>When GP falls below the minimum threshold, this field triggers the GP approval workflow before the invoice can be sent.</description>
    <label>GP Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>