force-app/main/default/objects/Invoice__c/fields/GP_Percent__c.field-meta.xml
<CustomField>
    <fullName>GP_Percent__c</fullName>
    <label>GP Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>