force-app/main/default/objects/Invoice__c/fields/GP_Status__c.field-meta.xml
<CustomField>
    <fullName>GP_Status__c</fullName>
    <label>GP Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>