force-app/main/default/objects/Invoice__c/fields/Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit__c</fullName>
    <description>Gross profit after both adjustments: Adjusted_Revenue__c minus Adjusted_Cost__c. Finance-visible per-invoice GP.</description>
    <formula>Adjusted_Revenue__c - Adjusted_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Profit</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>