force-app/main/default/objects/Invoice__c/fields/Internal_Cost_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Internal_Cost_Recovery__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Internal, vendor-facing, crew-facing, or subcontractor-facing back-charge / cost recovery. Reduces COGS (cost), NOT revenue. Finance-editable input.</description>
    <inlineHelpText>Vendor/crew/subcontractor back-charge recovered against cost. Reduces COGS, not revenue. Leave 0 if none.</inlineHelpText>
    <label>Internal Cost Recovery</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>