force-app/main/default/objects/Invoice__c/fields/Line_Items_Total__c.field-meta.xml
<CustomField>
    <fullName>Line_Items_Total__c</fullName>
    <description>Sum of all Invoice_Line_Item__c.Line_Total__c for this invoice.</description>
    <label>Line Items Total</label>
    <summarizedField>Invoice_Line_Item__c.Line_Total__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>