force-app/main/default/objects/Invoice__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>Date payment was received. Synced from QuickBooks/Celigo when Celigo integration is live.</description>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>