force-app/main/default/objects/Invoice__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unpaid</fullName>
                <default>true</default>
                <label>Unpaid</label>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Disputed</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>