force-app/main/default/objects/Invoice__c/fields/Temp_Irrigation_Billed__c.field-meta.xml
<CustomField>
    <fullName>Temp_Irrigation_Billed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temp Irrigation Billed</label>
    <type>Checkbox</type>
</CustomField>