force-app/main/default/objects/Invoice__c/fields/Total_COGS__c.field-meta.xml
<CustomField>
    <fullName>Total_COGS__c</fullName>
    <description>Sum of all Invoice_Line_Item__c.Line_Cost__c for this invoice.</description>
    <label>Total COGS</label>
    <summarizedField>Invoice_Line_Item__c.Line_Cost__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>